# basecoin-rs

./: Cargo.toml
crates/basecoin/: Cargo.toml
crates/helper/: Cargo.toml
crates/modules/auth/: Cargo.toml
crates/modules/bank/: Cargo.toml
crates/modules/bank/bank-type/: Cargo.toml
crates/modules/gov/: Cargo.toml
crates/modules/ibc/: Cargo.toml
crates/modules/module-api/: Cargo.toml
crates/modules/staking/: Cargo.toml
crates/modules/upgrade/: Cargo.toml
crates/store/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: errors.rs
crates/types/src/coin/: amount.rs  denom.rs  mod.rs
crates/x/auth/src/: context.rs
