[package]
name = "basecoin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/informalsystems/basecoin-rs"
authors = ["Informal Systems <hello@informal.systems>"]
description = """
    An example Tendermint ABCI application that integrates with ibc-rs, making
    use of tendermint-rs.
"""

[[bin]]
name = "basecoin"
path = "bin/basecoin/main.rs"

[features]
default = []
tower-abci = ["dep:tower-abci", "dep:tower"]

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
cosmrs = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true, default-features = false, features = ["server"] }
prost = { workspace = true, default-features = false }
serde_json = { workspace = true }
tendermint-abci = { workspace = true }
tendermint-proto = { workspace = true }
tokio = { workspace = true,  features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

tower-abci = { workspace = true, optional = true }
tower = { workspace = true, features = ["full"], optional = true }

cosmos-sdk-rs-store = { version = "0.1", path = "../store" }
cosmos-sdk-rs-config = { version = "0.1", path = "../config" }
cosmos-sdk-rs-helper = { version = "0.1", path = "../helper" }
cosmos-sdk-rs-auth = { version = "0.1", path = "../modules/auth" }
cosmos-sdk-rs-bank = { version = "0.1", path = "../modules/bank" }
cosmos-sdk-rs-bank-type = { version = "0.1", path = "../modules/bank/bank-type" }
cosmos-sdk-rs-gov = { version = "0.1", path = "../modules/gov" }
cosmos-sdk-rs-ibc = { version = "0.1", path = "../modules/ibc" }
cosmos-sdk-rs-module-api = { version = "0.1", path = "../modules/module-api" }
cosmos-sdk-rs-staking = { version = "0.1", path = "../modules/staking" }
cosmos-sdk-rs-upgrade = { version = "0.1", path = "../modules/upgrade" }

[dev-dependencies]
bytes = { workspace = true }
lazy_static = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
