[package]
name = "cosmos-sdk-rs-gov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { workspace = true }
derive_more = { workspace = true, default-features = false, features = ["from", "into", "display"] }
ibc = { workspace = true }
ibc-proto = { workspace = true, default-features = false, features = ["server"] }
tendermint = { workspace = true}
tendermint-proto = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true}
tracing = { workspace = true}
thiserror = { workspace = true }

cosmos-sdk-rs-store = { version = "0.1", path = "../../store" }
cosmos-sdk-rs-helper = { version = "0.1", path = "../../helper" }
cosmos-sdk-rs-module-api = { version = "0.1", path = "../module-api" }
cosmos-sdk-rs-bank-type = { version = "0.1", path = "../bank/bank-type" }
cosmos-sdk-rs-upgrade = { version = "0.1", path = "../upgrade" }
